<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Widget.Material3.BottomSheet.Modal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/action_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/nested_scroll_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin16"
                android:layout_weight="0"
                android:src="@drawable/ic_close"
                app:tint="@color/primary" />

            <TextView
                style="@style/HeaderText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin16"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:padding="@dimen/padding1"
                android:text="@string/language"
                android:textAlignment="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_weight="0"
                android:src="@drawable/ic_chat"
                android:visibility="invisible"
                app:tint="@color/primary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/uzbek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin16"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:padding="@dimen/padding1"
                android:text="@string/uzbek"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize16" />

            <ImageView
                android:id="@+id/tick_uzb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_weight="0"
                android:src="@drawable/ic_check"
                android:visibility="invisible"
                app:tint="@color/primary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin16"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:padding="@dimen/padding1"
                android:text="@string/english"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize16" />

            <ImageView
                android:id="@+id/tick_usa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_weight="0"
                android:src="@drawable/ic_check"
                android:visibility="invisible"
                app:tint="@color/primary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/russian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin16"
                android:layout_weight="1"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:padding="@dimen/padding1"
                android:text="@string/russian"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize16" />

            <ImageView
                android:id="@+id/tick_rus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_weight="0"
                android:src="@drawable/ic_check"
                android:visibility="invisible"
                app:tint="@color/black" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>