<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    android:orientation="vertical"
    tools:context=".ui.screens.main.profile.ProfileScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/status_bar_size"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding16">

        <TextView
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding1"
            android:text="@string/profile" />

        <ImageView
            android:id="@+id/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin16"
            android:layout_weight="0"
            android:src="@drawable/ic_log_out"
            android:visibility="gone"
            app:tint="@color/error" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="@dimen/padding16">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/picture"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@color/grayscale200"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/user_info_container"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/CornerSize50Percent"
                    tools:src="@drawable/default_user_picture" />

                <LinearLayout
                    android:id="@+id/user_info_container"
                    android:layout_width="@dimen/size0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin16"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/picture"
                    app:layout_constraintEnd_toStartOf="@id/edit"
                    app:layout_constraintStart_toEndOf="@id/picture"
                    app:layout_constraintTop_toTopOf="@id/picture">

                    <TextView
                        android:id="@+id/full_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_bold"
                        android:includeFontPadding="false"
                        android:maxLines="2"
                        android:padding="@dimen/padding1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize16"
                        tools:text="@tools:sample/full_names" />

                    <TextView
                        android:id="@+id/phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:includeFontPadding="false"
                        android:padding="@dimen/padding1"
                        android:textColor="@color/grayscale300"
                        android:textSize="@dimen/textSize12"
                        tools:text="@tools:sample/us_phones" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin16"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/user_info_container"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/black" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/padding16"
                android:visibility="gone">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:src="@drawable/ic_bell"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin16"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_bold"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:padding="@dimen/padding1"
                        android:text="@string/notifications"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize16" />

                    <TextView
                        android:id="@+id/notifications_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:padding="@dimen/padding1"
                        android:textColor="@color/grayscale300"
                        tools:text="@string/set_all_incoming_notifications" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:src="@drawable/ic_arrrow_right_ios"
                    app:tint="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="@dimen/padding16">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:src="@drawable/ic_language"
                    app:tint="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin16"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:fontFamily="@font/poppins_bold"
                        android:includeFontPadding="false"
                        android:maxLines="1"
                        android:padding="@dimen/padding1"
                        android:text="@string/language"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSize16" />

                    <TextView
                        android:id="@+id/current_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:padding="@dimen/padding1"
                        android:textColor="@color/grayscale300"
                        tools:text="@string/english" />

                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:src="@drawable/ic_arrrow_right_ios"
                    app:tint="@color/black" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/empty_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/size300"
                android:layout_height="@dimen/size300"
                android:src="@drawable/create_account_picture" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/log_in"
                style="@style/ButtonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/log_in" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>